# mozarella

./: .gitignore  package-lock.json
romy-frontend/: next.config.ts  package-lock.json  package.json
romy-frontend/.next/: app-build-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  trace
romy-frontend/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
romy-frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
romy-frontend/.next/server/chunks/: [root-of-the-server]__23f06a47._.js  [root-of-the-server]__23f06a47._.js.map  [root-of-the-server]__a1a9bbc5._.js  [root-of-the-server]__a1a9bbc5._.js.map  [root-of-the-server]__a372f984._.js  [root-of-the-server]__a372f984._.js.map  bc525_next_02969faa._.js  bc525_next_02969faa._.js.map  bc525_next_41739d89._.js  bc525_next_41739d89._.js.map  bc525_next_d370f28d._.js
romy-frontend/.next/types/: validator.ts
romy-frontend/dependencies/: swagger.json
romy-frontend/public/: sw.js
romy-frontend/src/app/: actions.ts  layout.tsx  manifest.ts
romy-frontend/src/styles/: main.scss
romy-ml/: .gitignore  pyproject.toml
romy-ml/docker/: Dockerfile  docker-compose.yml
romy-ml/src/: api.py  core.py  embeddings.py  faiss_vectordb.py  model.py  spider.py  structures.py
romy-notifications/: next.config.ts  package-lock.json  package.json
romy-notifications/src/app/: page.tsx
romy-onboarding/: index.html  style.css
src/styles/: main.scss
(+140 files in other folders)
