[project]
name = "hackwerk2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.6.8",
    "openai>=2.0.1",
    "numpy>=1.26.0",
    "faiss-cpu>=1.12.0",
    "langchain-anthropic>=0.3.21",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "python-dotenv>=1.1.1",
]
