[project]
name = "hackwerk2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.0.1",
    "numpy>=1.26.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "python-dotenv>=1.1.1",
    "loguru>=0.7.0",
    "ruff>=0.13.3",
    "aiohttp>=3.12.15",
]
